examples/test/testpolicy15675.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15675
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key48: value3
      key13: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value44
          key36: value4
          key49: value27
      podSelector:
        matchLabels:
          key10: value38
          key11: value15
          key49: value43
